[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://src/sprites/tiles and background_foreground (new)/backgroundmenu.jpg" type="Texture" id=2]
[ext_resource path="res://src/sprites/tiles and background_foreground (new)/titlemenu.png" type="Texture" id=3]
[ext_resource path="res://src/songs/Ove Melaa - Gloomey.ogg" type="AudioStream" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="background" type="Node2D" parent="."]

[node name="Backgroundmenu" type="Sprite" parent="background"]
position = Vector2( 512, 301 )
scale = Vector2( 0.533333, 0.553704 )
texture = ExtResource( 2 )

[node name="Titlemenu" type="Sprite" parent="background"]
position = Vector2( 514, 96 )
scale = Vector2( 0.617207, 0.777778 )
texture = ExtResource( 3 )

[node name="buttons" type="Node2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="buttons"]
anchor_right = 0.259
anchor_bottom = 0.03
margin_left = 384.0
margin_top = 288.0
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 1 )

[node name="jogar" type="Button" parent="buttons/VBoxContainer"]
modulate = Color( 1, 0.807843, 0, 1 )
self_modulate = Color( 1, 0.807843, 0, 1 )
margin_right = 256.0
margin_bottom = 20.0
text = "Jogar"
icon_align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="sair" type="Button" parent="buttons/VBoxContainer"]
modulate = Color( 1, 0.807843, 0, 1 )
self_modulate = Color( 1, 0.807843, 0, 1 )
margin_top = 24.0
margin_right = 256.0
margin_bottom = 44.0
text = "Sair"
icon_align = 1

[node name="music" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="music"]
stream = ExtResource( 4 )
volume_db = -25.0
autoplay = true

[connection signal="pressed" from="buttons/VBoxContainer/jogar" to="buttons/VBoxContainer" method="_on_start_pressed"]
[connection signal="pressed" from="buttons/VBoxContainer/sair" to="buttons/VBoxContainer" method="_on_quit_pressed"]
