[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://src/sprites/tiles and background_foreground (new)/backgroundmenu.jpg" type="Texture" id=2]
[ext_resource path="res://src/sprites/tiles and background_foreground (new)/objetivo.png" type="Texture" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="background" type="Node2D" parent="."]

[node name="Backgroundmenu" type="Sprite" parent="background"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 512, 301 )
scale = Vector2( 0.533333, 0.553704 )
texture = ExtResource( 2 )

[node name="buttons" type="Node2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="buttons"]
anchor_right = 0.259
anchor_bottom = 0.03
margin_left = 384.0
margin_top = 376.0
margin_right = 640.0
margin_bottom = 448.0
script = ExtResource( 1 )

[node name="continuar" type="Button" parent="buttons/VBoxContainer"]
modulate = Color( 1, 0.807843, 0, 1 )
self_modulate = Color( 1, 0.807843, 0, 1 )
margin_right = 256.0
margin_bottom = 20.0
text = "continuar"

[node name="Objetivo" type="Sprite" parent="."]
position = Vector2( 512, 232 )
scale = Vector2( 0.929608, 0.873057 )
texture = ExtResource( 3 )

[connection signal="pressed" from="buttons/VBoxContainer/continuar" to="buttons/VBoxContainer" method="_on_continuar_pressed"]
